--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="camera_code">cameraCode</string>
     <string name="all">all</string>
     <string name="all_cameras">All Cameras</string>
+    <string name="about_developer">About Developer</string>
+    <string name="please_filter_a_camera">Please filter a Camera!!</string>
+    <string name="sort_list">sortList</string>
+    <string name="about_app_description">I created this application because I love space exploration.\nThis application is about the Curiosity Rover on Mars which is currently active.\nUsing this application you can see the images clicked on different days by different cameras on the rover.\nThere is a settings page through which you can select multiple configurations using which you can sort or filter the data.</string>
+    <string name="linkedin"><a href="https://www.linkedin.com/in/shwetank-bhardwaj/">Tap here to open LinkedIn</a></string>
+    <string name="github"><a href="https://github.com/Shwetank-Bhardwaj">Tap here to open GitHub</a></string>
 </resources>
