--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Nasa Mars Photos</string>
     <string name="rover_name_curiosity">Rover Name: Curiosity</string>
-    <string name="search">Search</string>
+    <string name="search_by_date"> by Date</string>
     <string name="front_hazard_avoidance_camera">Front Hazard Avoidance Camera</string>
     <string name="rear_hazard_avoidance_camera">Rear Hazard Avoidance Camera</string>
     <string name="mast_camera">Mast Camera</string>
